--- a/css/styles.css
+++ b/css/styles.css
@@ -239,7 +239,8 @@ Hero styles
 .hero-title:not(:last-child) {
   margin-bottom: 48px;
 }
-.hero-btn {
+.hero-btn,
+.btn {
   display: block;
   font-family: var(--primary-font);
   cursor: pointer;
@@ -457,7 +458,7 @@ Customers icon
 Icons
 ==============================*/
 .icon {
-  padding: 96px 0 120px;
+  padding: 172px 0 120px;
 }
 
 .icon-list {
@@ -489,20 +490,15 @@ Icons
   transition: color var(--anim), background-color var(--anim),
     border-color var(--anim), box-shadow var(--anim);
 }
-.icon-button:hover {
+.icon-button:hover,
+.icon-button:focus {
   color: var(--color-white);
   background-color: var(--color-ocean);
   border-color: 1px solid transparent;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.icon-button:focus {
-  color: var(--color-white);
-  background-color: var(--color-ocean);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border: 1px solid transparent;
-}
+
 /*==============================
  card
 ==============================*/
@@ -586,7 +582,7 @@ Footer styles
   padding-top: 100px;
   padding-bottom: 100px;
 }
-.one {
+.footer_one {
   min-width: 264px;
   margin-right: 120px;
 }
@@ -613,8 +609,9 @@ Footer styles
   background-color: var(--color-navy-blue);
   width: 264px;
 }
-.two {
+.footer_two {
   min-width: 208px;
+  margin-right: 80px;
 }
 .media {
   font-family: var(--primary-font);
@@ -625,6 +622,54 @@ Footer styles
   color: var(--color-white);
   letter-spacing: 0.02em;
   margin-bottom: 16px;
+}
+.footer_three {
+  min-width: 453px;
+}
+.footer_subscribe {
+  display: flex;
+  gap: 24px;
+}
+.footer_email_input {
+  min-width: 264px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 0;
+  padding-left: 16px;
+  color: var(--color-white);
+  outline: transparent;
+}
+.footer_email_input::placeholder {
+  color: var(--color-white);
+}
+
+.subscribe-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-width: 165px;
+  gap: 16px;
+  height: 40px;
+  padding: 8px 24px;
+  background-color: var(--color-iris);
+  border-radius: 4px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--color-white);
+  cursor: pointer;
+  border: none;
+  transition: background-color var(--anim);
+}
+.subscribe-btn:focus,
+.subscribe-btn:hover {
+  background-color: var(--color-ocean);
 }
 /*==============================
 Footer icon
@@ -680,7 +725,8 @@ Modal window
   left: calc(50%);
   transform: translate(-50%, -50%);
   width: 408px;
-  min-height: 576px;
+  min-height: 584px;
+  padding: 24px;
   background-color: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -715,4 +761,156 @@ Modal window
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: var(--color-white);
+}
+/*==============================
+Form
+==============================*/
+.modal-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 48px;
+  margin-bottom: 24px;
+  color: var(--color-navy-blue);
+}
+label {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--color-light-slate);
+}
+
+.modal_label {
+  width: 360px;
+  margin-bottom: 4px;
+}
+.registration_form {
+  margin: 0;
+}
+.registration-form-wrapper {
+  position: relative;
+  margin-bottom: 8px;
+}
+.modal_label_input {
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color var(--anim);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+}
+.modal_label_input:focus {
+  border: 1px solid var(--color-iris);
+  border-radius: 4px;
+}
+.form_icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: var(--color-navy-blue);
+  transition: color var(--anim);
+}
+
+.modal_label_input:focus + .form_icon {
+  fill: var(--color-iris);
+}
+.modal_coment_label {
+  margin-bottom: 4px;
+}
+.modal_comment_text {
+  color: var(--color-navy-blue-modal);
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  outline: transparent;
+  transition: border-color var(--anim);
+  margin-bottom: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+}
+.modal_comment_text:focus {
+  border: 1px solid var(--color-iris);
+  border-radius: 4px;
+}
+textarea {
+  resize: none;
+}
+.modal_checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  color: var(--color-light-slate);
+}
+.check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 24px;
+}
+.modal_checked {
+  display: flex;
+  align-items: center;
+
+  position: relative;
+}
+.modal_checkbox_input {
+  appearance: none;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+}
+.modal_checkbox_icon {
+  position: absolute;
+
+  transform: translate(25%, 5%);
+  fill: transparent;
+}
+.modal_checkbox_input:focus-visible {
+  outline-color: var(--color-ocean);
+}
+
+.modal_checkbox_input:checked {
+  background-color: var(--color-ocean);
+  border: var(--color-ocean);
+}
+.modal_checkbox_input:checked + .modal_checkbox_icon {
+  fill: var(--color-cloud);
+}
+.modal_checkbox_text {
+  user-select: none;
+  font-family: var(--primary-font);
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.04em;
+  color: var(--color-slate);
+}
+.modal_checkbox_link {
+  color: var(--color-iris);
+}
+.modal-btn:focus,
+.modal-btn:hover {
+  background-color: var(--color-ocean);
 }
